Refactor lombok builder calls